nav and header draft completed

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -8,20 +8,38 @@
 </head>
 <body>
 <div class="container">
-    <div class="row-nav">
-        <div class="col-xl-3 offset-xl-2">
-            <img class="logo" src="img/logo.jpg"> codeup design
+    <nav>
+        <div class="row" id="navbar-row">
+           <div class="col-xl-3 offset-xl-2">
+            <img class="logo" src="img/logo.jpg">
+               <h4 class="my-auto">codeup design</h4>
+           </div>
+            <div class="col-xl-4 offset-xl-2 my-auto">
+                <ul>
+                    <li>SERVICES</li>
+                    <li>WORK</li>
+                    <li>BLOG</li>
+                    <li>CONTACT</li>
+                </ul>
+            </div>
         </div>
-        <div class="col-xl-4 offset-xl-1">
-            <ul>
-                <li>SERVICES</li>
-                <li>WORK</li>
-                <li>BLOG</li>
-                <li>CONTACT</li>
-            </ul>
+    </nav>
+    <div class="row">
+        <div class="col-xl-12" id="header-info">
+            <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1><br>
+            <h3>FROM PARK CITY, UTAH</h3>
         </div>
     </div>
+    <div class="row">
+        <div class="col-xl-5 offset-xl-4">
+            <button type="button" id="red" class="btn btn-circle btn-xl"><i class="fa fa-times">DESIGN</i></button>
+            <button type="button" id="yellow" class="btn btn-circle btn-xl"><i class="fa fa-times">DEVELOP</i></button>
+            <button type="button" id="green" class="btn btn-circle btn-xl"><i class="fa fa-times">SUPPORT</i></button>
+            <button type="button" id="blue" class="btn btn-circle btn-xl"><i class="fa fa-times">HOST</i></button>
+        </div>
     </div>
+    <hr>
+
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
