Adding CSS files

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -32,14 +32,60 @@
     </div>
     <div class="row">
         <div class="col-xl-5 offset-xl-4">
-            <button type="button" id="red" class="btn btn-circle btn-xl"><i class="fa fa-times">DESIGN</i></button>
-            <button type="button" id="yellow" class="btn btn-circle btn-xl"><i class="fa fa-times">DEVELOP</i></button>
-            <button type="button" id="green" class="btn btn-circle btn-xl"><i class="fa fa-times">SUPPORT</i></button>
-            <button type="button" id="blue" class="btn btn-circle btn-xl"><i class="fa fa-times">HOST</i></button>
+            <button type="button" class="red btn btn-circle btn-xl"><i class="fa fa-times">DESIGN</i></button>
+            <button type="button" class="yellow btn btn-circle btn-xl"><i class="fa fa-times">DEVELOP</i></button>
+            <button type="button" class="green btn btn-circle btn-xl"><i class="fa fa-times">SUPPORT</i></button>
+            <button type="button" class="blue btn btn-circle btn-xl"><i class="fa fa-times">HOST</i></button>
         </div>
     </div>
     <hr>
-
+    <div class="row">
+        <div class="col-xl-8">SELECTED WORK</div>
+        <div class="col-xl-4">THE LAST</div>
+    </div>
+    <div class="row">
+        <div class="col-xl-4">
+            <img src="img/apple-ipad.jpg">
+            <p class="fp">FEATURED PROJECT</p>
+            <button type="button" class="red btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
+            <button type="button" class="yellow btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
+            <button type="button" class="green btn btn-circle btn-sm"><i class="fa fa-times">S</i></button>
+            <button type="button" class="blue btn btn-circle btn-sm"><i class="fa fa-times">H</i></button>
+        </div>
+        <div class="col-xl-4">
+            <img src="img/macbook.jpg">
+            <p class="fp">FEATURED PROJECT</p>
+            <button type="button" class="red btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
+            <button type="button" class="yellow btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
+            <button type="button" class="green btn btn-circle btn-sm"><i class="fa fa-times">S</i></button>
+            <button type="button" class="blue btn btn-circle btn-sm"><i class="fa fa-times">H</i></button></div>
+        <div class="col-xl-4">
+            <ul>
+                <li><img src="img/mobile-phone.jpg" class="sidebar"><h5>THE ADMIN BAR AND ABSOLUTE POSITIONING</h5></li>
+                <li><img src="img/head.jpg" class="sidebar"><h5>NIBBLER AWESOME WEBSITE TESTING</h5></li>
+                <li><img src="img/ipad.jpg" class="sidebar"><h5>HOW TO GET GOOGLE TO LIKE YOU</h5></li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xl-4">
+            <img src="img/man.jpg">
+            <p class="fp">FEATURED PROJECT</p>
+            <button type="button" class="red btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
+            <button type="button" class="yellow btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
+            <button type="button" class="green btn btn-circle btn-sm"><i class="fa fa-times">S</i></button>
+            <button type="button" class="blue btn btn-circle btn-sm"><i class="fa fa-times">H</i></button>
+        </div>
+        <div class="col-xl-4">
+            <img src="img/security.jpg">
+            <p class="fp">FEATURED PROJECT</p>
+            <button type="button" class="red btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
+            <button type="button" class="yellow btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
+            <button type="button" class="green btn btn-circle btn-sm"><i class="fa fa-times">S</i></button>
+        </div>
+        <div class="col-xl-4">
+            test
+        </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
