draft, prior to nav bar editing

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -40,7 +40,7 @@
     </div>
     <hr>
     <div class="row">
-        <div class="col-xl-8">SELECTED WORK</div>
+        <div class="col-xl-8 sw-row">SELECTED WORK</div>
         <div class="col-xl-4">THE LAST</div>
     </div>
     <div class="row">
@@ -84,7 +84,9 @@
             <button type="button" class="green btn btn-circle btn-sm"><i class="fa fa-times">S</i></button>
         </div>
         <div class="col-xl-4">
-            test
+            <img id="twitter" src="img/twitter.png">
+            <p> LAST TWEET</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque cumque deserunt dolore est necessitatibus, nemo obcaecati officia quasi rerum soluta, ut veritatis! Amet assumenda ducimus quaerat tenetur vel veritatis, vero.</p>
         </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
