--- a/codeup-design.html
+++ b/codeup-design.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xl-5 offset-xl-4">
+        <div class="col-xl-12 text-center">
             <button type="button" class="red btn btn-circle btn-xl"><i class="fa fa-times">DESIGN</i></button>
             <button type="button" class="yellow btn btn-circle btn-xl"><i class="fa fa-times">DEVELOP</i></button>
             <button type="button" class="green btn btn-circle btn-xl"><i class="fa fa-times">SUPPORT</i></button>
@@ -59,7 +59,7 @@
             <button type="button" class="yellow btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
             <button type="button" class="green btn btn-circle btn-sm"><i class="fa fa-times">S</i></button>
             <button type="button" class="blue btn btn-circle btn-sm"><i class="fa fa-times">H</i></button></div>
-        <div class="col-xl-4">
+        <div class="col-xl-4 d-none d-md-block d-lg-block d-xl-block">
             <ul>
                 <li><img src="img/mobile-phone.jpg" class="sidebar"><h5>THE ADMIN BAR AND ABSOLUTE POSITIONING</h5></li>
                 <li><img src="img/head.jpg" class="sidebar"><h5>NIBBLER AWESOME WEBSITE TESTING</h5></li>
@@ -83,7 +83,7 @@
             <button type="button" class="yellow btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
             <button type="button" class="green btn btn-circle btn-sm"><i class="fa fa-times">S</i></button>
         </div>
-        <div class="col-xl-4">
+        <div class="col-xl-4 d-none d-md-block d-lg-block d-xl-block">
             <img id="twitter" src="img/twitter.png">
             <p> LAST TWEET</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque cumque deserunt dolore est necessitatibus, nemo obcaecati officia quasi rerum soluta, ut veritatis! Amet assumenda ducimus quaerat tenetur vel veritatis, vero.</p>
