--- a/codeup-design.html
+++ b/codeup-design.html
@@ -31,9 +31,19 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xl-12 text-center">
+        <div class=" col-xl-12 col-lg-12 col-md-12 col-sm-12 d-none d-sm-block text-center">
             <button type="button" class="red btn btn-circle btn-xl"><i class="fa fa-times">DESIGN</i></button>
             <button type="button" class="yellow btn btn-circle btn-xl"><i class="fa fa-times">DEVELOP</i></button>
+            <button type="button" class="green btn btn-circle btn-xl"><i class="fa fa-times">SUPPORT</i></button>
+            <button type="button" class="blue btn btn-circle btn-xl"><i class="fa fa-times">HOST</i></button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 d-block d-sm-none text-center">
+            <button type="button" class="red btn btn-circle btn-xl"><i class="fa fa-times">DESIGN</i></button>
+            <button type="button" class="yellow btn btn-circle btn-xl"><i class="fa fa-times">DEVELOP</i></button>
+        </div>
+        <div class="col-xs-12 d-block d-sm-none text-center">
             <button type="button" class="green btn btn-circle btn-xl"><i class="fa fa-times">SUPPORT</i></button>
             <button type="button" class="blue btn btn-circle btn-xl"><i class="fa fa-times">HOST</i></button>
         </div>
@@ -44,7 +54,7 @@
         <div class="col-xl-4">THE LAST</div>
     </div>
     <div class="row">
-        <div class="col-xl-4">
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-6">
             <img src="img/apple-ipad.jpg">
             <p class="fp">FEATURED PROJECT</p>
             <button type="button" class="red btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
@@ -52,14 +62,14 @@
             <button type="button" class="green btn btn-circle btn-sm"><i class="fa fa-times">S</i></button>
             <button type="button" class="blue btn btn-circle btn-sm"><i class="fa fa-times">H</i></button>
         </div>
-        <div class="col-xl-4">
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-6">
             <img src="img/macbook.jpg">
             <p class="fp">FEATURED PROJECT</p>
             <button type="button" class="red btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
             <button type="button" class="yellow btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
             <button type="button" class="green btn btn-circle btn-sm"><i class="fa fa-times">S</i></button>
             <button type="button" class="blue btn btn-circle btn-sm"><i class="fa fa-times">H</i></button></div>
-        <div class="col-xl-4 d-none d-md-block d-lg-block d-xl-block">
+        <div class="col-xl-4 col-lg-4 col-md-4 d-none d-md-block">
             <ul>
                 <li><img src="img/mobile-phone.jpg" class="sidebar"><h5>THE ADMIN BAR AND ABSOLUTE POSITIONING</h5></li>
                 <li><img src="img/head.jpg" class="sidebar"><h5>NIBBLER AWESOME WEBSITE TESTING</h5></li>
@@ -68,7 +78,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xl-4">
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-6">
             <img src="img/man.jpg">
             <p class="fp">FEATURED PROJECT</p>
             <button type="button" class="red btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
@@ -76,14 +86,14 @@
             <button type="button" class="green btn btn-circle btn-sm"><i class="fa fa-times">S</i></button>
             <button type="button" class="blue btn btn-circle btn-sm"><i class="fa fa-times">H</i></button>
         </div>
-        <div class="col-xl-4">
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-6">
             <img src="img/security.jpg">
             <p class="fp">FEATURED PROJECT</p>
             <button type="button" class="red btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
             <button type="button" class="yellow btn btn-circle btn-sm"><i class="fa fa-times">D</i></button>
             <button type="button" class="green btn btn-circle btn-sm"><i class="fa fa-times">S</i></button>
         </div>
-        <div class="col-xl-4 d-none d-md-block d-lg-block d-xl-block">
+        <div class="col-xl-4 col-lg-4 col-md-4 d-none d-md-block">
             <img id="twitter" src="img/twitter.png">
             <p> LAST TWEET</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque cumque deserunt dolore est necessitatibus, nemo obcaecati officia quasi rerum soluta, ut veritatis! Amet assumenda ducimus quaerat tenetur vel veritatis, vero.</p>
