--- a/codeup-design.html
+++ b/codeup-design.html
@@ -7,14 +7,29 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+<nav class="navbar2">
+        <div class="nav2 d-none d-sm-block d-md-none">
+            <ul>
+                <li>SERVICES</li>
+                <li>WORK</li>
+                <li></li>
+                <li>BLOG</li>
+                <li>CONTACT</li>
+            </ul>
+            <img class=logo2 src="img/logo.jpg">
+        </div>
+</nav>
+
+
 <div class="container">
     <nav>
         <div class="row" id="navbar-row">
-           <div class="col-xl-4 offset-xl-1">
+           <div class="col-xl-4 offset-xl-1 d-none d-md-block">
             <img class="logo" src="img/logo.jpg">
                <h4 class="my-auto">codeup design</h4>
            </div>
-            <div class="col-xl-6 offset-xl-1 my-auto">
+            <div class="col-xl-6 offset-xl-1 my-auto d-none d-md-block">
                 <ul>
                     <li>SERVICES</li>
                     <li>WORK</li>
@@ -31,14 +46,20 @@
         </div>
     </div>
     <div class="row">
-        <div class=" col-xl-12 col-lg-12 col-md-12 col-sm-12 d-none d-sm-block text-center">
+        <div class="col-6 col-lg-3 col-md-3 col-sm-3 text-center">
             <button type="button" class="red btn btn-circle btn-xl"><i class="fa fa-times">DESIGN</i></button>
+        </div>
+        <div class = "col-6 col-lg-3 col-md-3 col-sm-3 text-center">
             <button type="button" class="yellow btn btn-circle btn-xl"><i class="fa fa-times">DEVELOP</i></button>
+        </div>
+        <div class="col-6 col-lg-3 col-md-3 col-sm-3 text-center">
             <button type="button" class="green btn btn-circle btn-xl"><i class="fa fa-times">SUPPORT</i></button>
+        </div>
+        <div class="col-6 col-lg-3 col-md-3 col-sm-3 text-center">
             <button type="button" class="blue btn btn-circle btn-xl"><i class="fa fa-times">HOST</i></button>
         </div>
     </div>
-    <div class="row">
+    <!--<div class="row">
         <div class="col-xs-12 d-block d-sm-none text-center">
             <button type="button" class="red btn btn-circle btn-xl"><i class="fa fa-times">DESIGN</i></button>
             <button type="button" class="yellow btn btn-circle btn-xl"><i class="fa fa-times">DEVELOP</i></button>
@@ -46,7 +67,7 @@
         <div class="col-xs-12 d-block d-sm-none text-center">
             <button type="button" class="green btn btn-circle btn-xl"><i class="fa fa-times">SUPPORT</i></button>
             <button type="button" class="blue btn btn-circle btn-xl"><i class="fa fa-times">HOST</i></button>
-        </div>
+        </div> -->
     </div>
     <hr>
     <div class="row">
