--- a/codeup-design.html
+++ b/codeup-design.html
@@ -25,11 +25,11 @@
 <div class="container">
     <nav>
         <div class="row" id="navbar-row">
-           <div class="col-xl-4 offset-xl-1 d-none d-md-block">
+           <div class="col-xl-4 col-lg-4 col-md-4 offset-xl-1 offset-lg-1 offset-md-1 d-none d-md-block">
             <img class="logo" src="img/logo.jpg">
                <h4 class="my-auto">codeup design</h4>
            </div>
-            <div class="col-xl-6 offset-xl-1 my-auto d-none d-md-block">
+            <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-6 offset-md-1 my-auto d-none d-md-block">
                 <ul>
                     <li>SERVICES</li>
                     <li>WORK</li>
