--- a/codeup-design.html
+++ b/codeup-design.html
@@ -21,6 +21,23 @@
         </div>
 </nav>
 
+<nav class="xs-nav-row">
+    <div class="row bg-white d-xs-block d-sm-none d-md-none d-lg-none d-xl-none">
+        <img src="img/logo.jpg" class="icon3 mx-auto">
+    </div>
+    <div class="row d-xs-block d-sm-none d-md-none d-lg-none d-xl-none">
+
+        <div class="col-12 text-center"><h3>codeup design</h3></div>
+        <div class="col-12">
+            <ul>
+                <li class="d-inline px-2 my-3">SERVICES</li>
+                <li class="d-inline px-2 my-3">WORK</li>
+                <li class="d-inline px-2 my-3">BLOG</li>
+                <li class="d-inline px-2 my-3">CONTACT</li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <div class="container">
     <nav>
